Do things on request page

--- a/src/app/pages/home/requests-page/requests-page.page.scss
+++ b/src/app/pages/home/requests-page/requests-page.page.scss
@@ -28,6 +28,10 @@ ion-content {
                     height: 35px;
                 }
             }
+
+            .footer {
+                font-size: smaller;
+            }
         }
     }
 
