--- a/src/app/pages/home/requests-page/requests-page.page.html
+++ b/src/app/pages/home/requests-page/requests-page.page.html
@@ -3,7 +3,7 @@
 		<ion-buttons (click)="backHome()" class="ion-padding-horizontal" slot="start">
 			<ion-icon size="large" color="light" name="arrow-back-outline"></ion-icon>
 		</ion-buttons>
-		<ion-title color="light">បញ្ជីពាក្យស្នើរ{{ headerTitle }}</ion-title>
+		<ion-title color="light">{{ headerTitle | translate}}</ion-title>
 	</ion-toolbar>
 </ion-header>
 
@@ -16,13 +16,14 @@
 					<ion-card>
 						<ion-card-header [color]="currentCardHeaderColor">
 							<ion-card-title color="light" class="ion-text-start">
-								{{ requestStatusInKhmer[item.status] }}
+								{{ 'REQUEST_STATUS.' + item.status | translate }}
 								<ion-icon (click)="alertConfrim(item._id)" class="trash-icon ion-float-end" color="danger" name="trash" mode="md"></ion-icon>
 							</ion-card-title>
 						</ion-card-header>
 						<ion-card-content>
 							{{ item.description }}
 						</ion-card-content>
+						<span class="footer ion-padding-start">{{ 'REQUEST_PAGE.DATE' | translate }}: {{ item.createdAt | date }}</span>
 					</ion-card>
 				</ion-col>
 			</ion-row>
@@ -42,7 +43,7 @@
 		</ion-grid>
 	</div>
 	<ion-fab vertical="bottom" horizontal="start" slot="fixed">
-		<ion-fab-button>
+		<ion-fab-button color="secondary">
 			<ion-icon name="arrow-forward-circle"></ion-icon>
 		</ion-fab-button>
 		<ion-fab-list side="end">
