--- a/src/app/pages/general/moc/moc.page.html
+++ b/src/app/pages/general/moc/moc.page.html
@@ -21,7 +21,7 @@
             </ion-row>
             <ion-row>
                 <strong>{{ 'MOC.CAPITAL_REGISTRATION' | translate }} :</strong>
-                <p class="ion-margin-start">{{ moc.capital | number }} <strong>{{ 'MOC.RIEL' | translate }}</strong></p>
+                <p class="ion-margin-start">{{ moc.capital | number }} ៛</p>
             </ion-row>
             <ion-row>
                 <strong>{{ 'MOC.TYPE' | translate }} :</strong>
