--- a/src/app/pages/tax-calculation/salary-tax/salary-tax.page.html
+++ b/src/app/pages/tax-calculation/salary-tax/salary-tax.page.html
@@ -15,13 +15,13 @@
 					<div>
 						<ion-label position="floating">{{ 'TAX_CALCULATION.SALARY' | translate }}</ion-label>
 						<ion-item>
-							<ion-input type="number" placeholder="0 រៀល" formControlName="salary" required></ion-input>
+							<ion-input type="number" placeholder="0 ៛" formControlName="salary" required></ion-input>
 						</ion-item>
 					</div>
 					<div class="ion-margin-top">
 						<ion-label position="floating">{{ 'TAX_CALCULATION.BONUS' | translate }}</ion-label>
 						<ion-item>
-							<ion-input type="number" placeholder="0 រៀល" formControlName="bonus"></ion-input>
+							<ion-input type="number" placeholder="0 ៛" formControlName="bonus"></ion-input>
 						</ion-item>
 					</div>
 					<div class="ion-margin-top">
