--- a/src/app/pages/tax-calculation/tax-calculation.page.html
+++ b/src/app/pages/tax-calculation/tax-calculation.page.html
@@ -13,7 +13,7 @@
 			<ion-card (click)="goToCalculator('general-tax')">
 				<div class="content-wrapper ion-text-center">
 					<div>
-						<ion-icon name="receipt-outline"></ion-icon>
+						<ion-icon name="receipt"></ion-icon>
 					</div>
 					<ion-label>
 						{{ 'TAX_CALCULATION.BTN1' | translate }}
@@ -23,7 +23,8 @@
 			<ion-card (click)="goToCalculator('salary-tax')">
 				<div class="content-wrapper  ion-text-center">
 					<div>
-						<ion-icon name="calculator-outline"></ion-icon>
+						<!-- <ion-icon name="calculator-outline"></ion-icon> -->
+						<ion-icon  name="logo-usd"></ion-icon>
 					</div>
 					<ion-label>
 						{{ 'TAX_CALCULATION.BTN2' | translate }}
