hehe more clean code

--- a/src/app/pages/general/moc/moc.page.html
+++ b/src/app/pages/general/moc/moc.page.html
@@ -72,7 +72,7 @@
             </ion-row>
         </ion-grid>
         <!-- PDF section  -->
-        <div class="Pdf-file">
+        <div class="pdf-file">
             <strong>{{ 'DOC.DOWNLOAD_PDF' | translate }} :</strong>
             <div *ngIf="docs && !isFetching">
                 <ion-card class="doc-card">
