--- a/src/app/pages/general/tax-tap/tax-tap.page.html
+++ b/src/app/pages/general/tax-tap/tax-tap.page.html
@@ -87,7 +87,7 @@
             </ion-row>
         </ion-grid>
         <!-- PDF section  -->
-        <div class="Pdf-file">
+        <div class="pdf-file">
             <strong>{{ 'DOC.DOWNLOAD_PDF' | translate }} :</strong>
             <div *ngIf="docs">
                 <ion-card class="doc-card">
