--- a/src/app/pages/general/tax-tap/tax-tap.page.scss
+++ b/src/app/pages/general/tax-tap/tax-tap.page.scss
@@ -6,7 +6,7 @@ ion-content {
             height: 16px;
         }
 
-        .Pdf-file {
+        .pdf-file {
             margin-top: 30px;
 
             a {
