--- a/src/app/pages/home/document-inventory/document-inventory.page.html
+++ b/src/app/pages/home/document-inventory/document-inventory.page.html
@@ -21,7 +21,7 @@
 			</form>
 		</div>
 		<!-- PDF section  -->
-        <div class="Pdf-file">
+        <div class="pdf-file">
 			<strong class="ion-margin-top">{{ 'DOC.DOWNLOAD_PDF' | translate }} :</strong>
 			<div *ngIf="!isFetching">
 				<div *ngIf="docs">
