--- a/src/app/pages/home/document-inventory/document-inventory.page.scss
+++ b/src/app/pages/home/document-inventory/document-inventory.page.scss
@@ -7,7 +7,7 @@ ion-content {
             background-color: #f0f0f0;
         }
 
-        .Pdf-file {
+        .pdf-file {
             // margin-top: 0px;
 
             a {
