--- a/src/app/pages/service-pricing/service-pricing.page.html
+++ b/src/app/pages/service-pricing/service-pricing.page.html
@@ -9,6 +9,7 @@
 
 <ion-content>
   <div class="main-container">
+    <!-- monthly Tax Service Pricing -->
     <ion-card>
       <ion-card-content>
         <ion-card-title class="text-center">{{ 'SERVICE.MONTHLY_TAX_HEADER' | translate }}</ion-card-title>
@@ -17,7 +18,9 @@
             <div>{{ 'SERVICE.PRICING_LESSTHAN_50' | translate }}:</div>
           </ion-col>
           <ion-col size="5">
-            <div>{{ 100 | currency: 'USD' }}</div>
+            <div *ngIf="servicePricing && servicePricing.monthlyTaxService">
+              {{ servicePricing.monthlyTaxService.lessThanThresholdPrice | currency: 'USD' }}
+            </div>
           </ion-col>
         </ion-row>
         <ion-row class="ion-margin-top">
@@ -25,12 +28,14 @@
             <div>{{ 'SERVICE.PRICING_MORETHAN_50' | translate }}: </div>
           </ion-col>
           <ion-col size="5">
-            <div>{{ 200 | currency: 'USD' }}</div>
+            <div *ngIf="servicePricing && servicePricing.monthlyTaxService">
+              {{ servicePricing.monthlyTaxService.moreThanThresholdPrice | currency: 'USD' }}
+            </div>
           </ion-col>
         </ion-row>
       </ion-card-content>
     </ion-card>
-
+    <!-- Annual Tax Service Pricing -->
     <ion-card>
       <ion-card-content>
         <ion-card-title class="text-center">{{ 'SERVICE.ANNUAL_TAX_HEADER' | translate }}</ion-card-title>
@@ -39,7 +44,9 @@
             <div>{{ 'SERVICE.INCOME_TAX' | translate }}: </div>
           </ion-col>
           <ion-col size="5">
-            <div>{{ 400 | currency: 'USD' }}</div>
+            <div *ngIf="servicePricing && servicePricing.annualTaxService">
+              {{ servicePricing.annualTaxService.salaryTaxPrice | currency: 'USD' }}
+            </div>
           </ion-col>
         </ion-row>
         <ion-row class="ion-margin-top">
@@ -47,7 +54,9 @@
             <div>{{ 'SERVICE.PATENT_TAX' | translate }}: </div>
           </ion-col>
           <ion-col size="5">
-            <div>{{ 50 | currency: 'USD' }}</div>
+            <div *ngIf="servicePricing && servicePricing.annualTaxService">
+              {{ servicePricing.annualTaxService.patentTaxPrice | currency: 'USD' }}
+            </div>
           </ion-col>
         </ion-row>
         <ion-row class="ion-margin-top">
@@ -55,7 +64,9 @@
             <div>{{ 'SERVICE.TRADEMARK_TAX' | translate }}: </div>
           </ion-col>
           <ion-col size="5">
-            <div>{{ 20 | currency: 'USD' }}</div>
+            <div *ngIf="servicePricing && servicePricing.annualTaxService">
+              {{ servicePricing.annualTaxService.trademarkTaxPrice | currency: 'USD' }}
+            </div>
           </ion-col>
         </ion-row>
         <ion-row class="ion-margin-top">
@@ -63,7 +74,9 @@
             <div>{{ 'SERVICE.PROPERTY_TAX' | translate }}: </div>
           </ion-col>
           <ion-col size="5">
-            <div>{{ 20 | currency: 'USD' }}</div>
+            <div *ngIf="servicePricing && servicePricing.annualTaxService">
+              {{ servicePricing.annualTaxService.propertyTaxPrice | currency: 'USD' }}
+            </div>
           </ion-col>
         </ion-row>
         <ion-row class="ion-margin-top">
@@ -71,10 +84,36 @@
             <div>{{ 'SERVICE.TRANSPORTATION_TAX' | translate }}: </div>
           </ion-col>
           <ion-col size="5">
-            <div>{{ 20 | currency: 'USD' }}</div>
+            <div *ngIf="servicePricing && servicePricing.annualTaxService">
+              {{ servicePricing.annualTaxService.transportationTaxPrice | currency: 'USD' }}
+            </div>
           </ion-col>
         </ion-row>
       </ion-card-content>
+    </ion-card>
+    <!-- document url -->
+    <ion-card class="pdf-file">
+      <ion-row *ngIf="servicePricing && servicePricing.docUrl">
+        <ion-col size="3">
+          <ion-icon (click)="onClickdownload(servicePricing.docUrl)"
+            color="primary" 
+            class="pdf-icon" 
+            name="document-attach">
+          </ion-icon>
+        </ion-col>
+        <ion-col>
+          <p>{{ 'SERVICE.DOC_NAME' | translate }}</p>
+        </ion-col>
+        <ion-col size="2">
+          <ion-icon
+            (click)="onClickdownload(servicePricing.docUrl)"
+            color="primary"
+            size="large"
+            name="download"
+            mode="md">
+          </ion-icon>
+        </ion-col>
+      </ion-row>
     </ion-card>
   </div>
 </ion-content>
