--- a/src/app/pages/obligation/tax-per-years/tax-per-years.page.html
+++ b/src/app/pages/obligation/tax-per-years/tax-per-years.page.html
@@ -19,7 +19,7 @@
         </ion-col>
         <ion-col size="8" class="border-bottom">
           <div>
-            <h6>{{ 'COMPANY_STATUS.TAX_PAID_AMOUNT' | translate }} (រៀល)</h6>
+            <h6>{{ 'COMPANY_STATUS.TAX_PAID_AMOUNT' | translate }}</h6>
           </div>
         </ion-col>
       </ion-row>
@@ -31,7 +31,8 @@
         </ion-col>
         <ion-col size="8" class="border-bottom">
           <div>
-            <h6>{{ item.taxPaidAmount ? (item.taxPaidAmount | number) : '...' }}</h6>
+            <h6 *ngIf="item.taxPaidAmount">{{ item.taxPaidAmount | number }} ៛</h6>
+            <h6 *ngIf="!item.taxPaidAmount">...</h6>
           </div>
         </ion-col>
       </ion-row>
