minor bug in doc invent page

--- a/src/app/pages/home/document-inventory/document-inventory.page.html
+++ b/src/app/pages/home/document-inventory/document-inventory.page.html
@@ -8,7 +8,7 @@
 </ion-header>
 
 <ion-content>
-	<ion-progress-bar *ngIf="isFetching" type="indeterminate"></ion-progress-bar>
+	<ion-progress-bar *ngIf="isFetching || isSendingRequest" type="indeterminate"></ion-progress-bar>
 	<div class="main-container">
 		<div class="request-section">
 			<form [formGroup]="requestForm">
